
Both utilities use argparse (instead of optparse), which is included with Python
2.7. For earlier versions of Python,  it will have to be supplied.  Installation
is  trivial:  just  download from  http://pypi.python.org/pypi/argparse  and put 
argparse.py in any sys.path directory.

When doing DMPAFT, no longer tries to correct for DST.


1.14.1 07/06/12

Hardened retry strategy for the WeatherLink IP. If the port fails to open at all, or
a socket error occurs, it will thrown an exception (resulting in a retry in 60 seconds).
If a socket returns an incomplete result, it will continue to retry until everything 
has been read.

Fixed minor bug that causes the reporting thread to prematurely terminate if an exception
is thrown while doing an FTP.


1.14.0 06/18/12

Added smartphone formatted mobile webpage, contributed by user Torbjörn Einarsson.
If you are doing a fresh install, then these pages will be generated automatically.
If you are doing an upgrade, then see the upgrade guide on how to have these webpages
generated. Thanks, Tobbe!

Three changes suggested by user Charlie Spirakis:
  o Changed umask in daemon.py to 0022;
  o Allow location of process ID file to be specified on the command line
    of weewx;
  o Start script allows daemon to be run as a specific user.
Thanks, Charlie!

Corrected bug in humidity reports to CWOP that shows itself when the humidity is
in the single digits.

Now includes software in CWOP APRS equipment field.


1.13.2 05/02/12

Now allows CWOP stations with prefix 'EW'.

Fixed bug that showed itself in the line color with plots with 3 or more lines.

Changed debug  message when reaching the end  of memory in the  VP2 to something
slightly less alarming.


1.13.1 03/25/12

Added  finer control  over the  line plots.  Can now  add optional  markers. The
marker_type  can be  'none' (the  default),  'cross', 'box',  'circle', or  'x'.
Also, line_type can  now either be 'solid' (the default)  or 'none' (for scatter