@@ -21,13 +21,40 @@ class ScalarStats(object):
          self.max, self.maxtime, 
          self.sum, self.count) = stats_tuple if stats_tuple else (None, None, None, None, 0.0, 0)
          
-    @property
-    def avg(self):
-        return self.sum / self.count if self.count else None
-
     def getStatsTuple(self):
         """Return a stats-tuple. That is, a tuple containing the gathered statistics."""
         return (self.min, self.mintime, self.max, self.maxtime, self.sum, self.count)
+    
+    def mergeHiLo(self, x_stats):
+        if x_stats.min is not None:
+            if self.min is None or x_stats.min < self.min:
+                self.min     = x_stats.min
+                self.mintime = x_stats.mintime
+        if x_stats.max is not None:
+            if self.max is None or x_stats.max > self.max:
+                self.max     = x_stats.max
+                self.maxtime = x_stats.max_time
+
+    def mergeSum(self, x_stats):
+        self.sum   += x_stats.sum
+        self.count += x_stats.count
+
+    def addHiLo(self, val, ts):
+        if val is not None:
+            if self.min is None or val < self.min:
+                self.min     = val
+                self.mintime = ts
+            if self.max is None or val > self.max:
+                self.max     = val
+                self.maxtime = ts
+
+    def addSum(self, val):
+        self.sum += val
+        self.count += 1
+        
+    @property
+    def avg(self):
+        return self.sum / self.count if self.count else None
 
 class VecStats(object):
     """Accumulates statistics for a vector value."""
@@ -35,28 +62,72 @@ class VecStats(object):
         (self.min, self.mintime,
          self.max, self.maxtime,
          self.sum, self.count,
-         self.vecMaxDir, self.xsum, self.ysum, 
+         self.max_dir, self.xsum, self.ysum, 
          self.squaresum, self.squarecount) = stats_tuple if stats_tuple else (None, None, None, None, 0.0, 0,
                                                                               None, 0.0, 0.0, 0.0, 0)
 
     def getStatsTuple(self):
         """Return a stats-tuple. That is, a tuple containing the gathered statistics."""
         return (self.min, self.mintime, self.max, self.maxtime, self.sum, self.count,
-                self.vecMaxDir, self.xsum, self.ysum, self.squaresum, self.squarecount)
+                self.max_dir, self.xsum, self.ysum, self.squaresum, self.squarecount)
 
+    def mergeHiLo(self, x_stats):
+        if x_stats.min is not None:
+            if self.min is None or x_stats.min < self.min:
+                self.min     = x_stats.min
+                self.mintime = x_stats.mintime
+        if x_stats.max is not None:
+            if self.max is None or x_stats.max > self.max:
+                self.max     = x_stats.max
+                self.maxtime = x_stats.max_time
+                self.max_dir = x_stats.max_dir
+
+    def mergeSum(self, x_stats):
+        self.sum         += x_stats.sum
+        self.count       += x_stats.count
+        self.xsum        += x_stats.xsum
+        self.ysum        += x_stats.ysum
+        self.squaresum   += x_stats.squaresum
+        self.squarecount += x_stats.squarecount
+        
+    def addHiLo(self, val, ts):
+        (speed, dirN) = val
+        if speed is not None:
+            if self.min is None or speed < self.min:
+                self.min = speed
+                self.mintime = ts
+            if self.max is None or speed > self.max:
+                self.max = speed
+                self.maxtime = ts
+                self.max_dir = dirN
+        
+    def addSum(self, val):
+        (speed, dirN) = val
+        if speed is not None:
+            self.sum         += speed
+            self.count       += 1
+            self.squaresum   += speed**2
+            if dirN is not None :
+                self.xsum += speed * math.cos(math.radians(90.0 - dirN))
+                self.ysum += speed * math.sin(math.radians(90.0 - dirN))
+                self.squarecount += 1
+            
+    @property
+    def vec_avg(self):
+        if self.count:
+            return math.sqrt((self.xsum**2 + self.ysum**2) / self.count**2)
+    @property
+    def vec_dir(self):
+        if self.squarecount:
+            _result = 90.0 - math.degrees(math.atan2(self.ysum, self.xsum))
+            if _result < 0.0:
+                _result += 360.0
+            return _result
+        
 class DictAccum(dict):
     """Accumulates statistics for a set of observation types."""
     def __init__(self, timespan):
         self.timespan = timespan
-        
-    def initObservation(self, obs_type, stats_tuple):
-        # An exception will get thrown if the stats_tuple is of the wrong length. 
-        # First try a scalar:
-        try:
-            self[obs_type] = ScalarStats(stats_tuple)
-        except ValueError:
-            # That didn't work. Assume it's a vector.
-            self[obs_type] = VecStats(stats_tuple)
         
     def addRecord(self, record):
         if not self.timespan.includesArchiveTime(record['dateTime']):
@@ -65,23 +136,12 @@ class DictAccum(dict):
         for obs_type in record:
             if obs_type=='dateTime':
                 continue
-            if obs_type not in self:
-                # The observation type does not exist in me yet. Initialize a new stats holder.
-                # But, which type? Scalar or vector? 
-                try:
-                    # Test whether the observation is indexable, which would indicate
-                    # it's a tuple holding (magnitude, direction).
-                    record[obs_type][0]
-                except TypeError:
-                    # We got a TypeError. It must be a simple scalar.
-                    self[obs_type] = ScalarStats()
-                else:
-                    # Well, that worked. It must be a vector.
-                    self[obs_type] = VecStats()
-            try:
-                self._addVector(record, obs_type)
-            except TypeError:
-                self._addScalar(record, obs_type)
+            self.initStats(obs_type)
+            if obs_type=='windGust':
+                self['wind'].addHiLo(record['windGust'], record['dateTime'])
+            else:
+                self[obs_type].addHiLo(record[obs_type], record['dateTime'])
+                self[obs_type].addSum(record[obs_type])
                 
     def mergeStats(self, accumulator):
         """Merge the stats of another accumulator into me."""
@@ -89,54 +149,25 @@ class DictAccum(dict):
             raise OutOfSpan("Attempt to merge an accumulator whose timespan is not a subset")
 
         for obs_type in accumulator:
-            if self[obs_type].min is None or accumulator[obs_type].min < self[obs_type].min:
-                self[obs_type].min = accumulator[obs_type].min
-                self[obs_type].mintime = accumulator[obs_type].mintime
-                
-                blah, blah!
-                
+            self.initStats(obs_type)
+            self[obs_type].mergeHiLo(accumulator[obs_type])
+                    
     def getRecord(self):
         
         record = {}
         for obs_type in self:
-            # TODO: What about 'wind'?
             record[obs_type] = self[obs_type].avg
+            if obs_type == 'wind':
+                record['windDir']     = self[obs_type].vec_dir
+                record['windGust']    = self[obs_type].max
+                record['windGustDir'] = self[obs_type].max_dir
             
-    def _addVector(self, record, obs_type):
-        (speed, theta) = record[obs_type]
-        if speed is None:
+    def initStats(self, obs_type, stats_tuple=None):
+        # 
+        if obs_type in ['dateTime', 'windGust'] or obs_type in self:
             return
-        if self[obs_type].min is None or speed < self[obs_type].min:
-            self[obs_type].min = speed
-            self[obs_type].mintime = record['dateTime']
-        if self[obs_type].max is None or speed > self[obs_type].max:
-            self[obs_type].max = speed
-            self[obs_type].maxtime = record['dateTime']
-            self[obs_type].vecMaxDir = theta
-        # This is a bit of a cludge and requires special knowledge of the observation types:
-        if obs_type != 'windGust':
-            self[obs_type].sum         += speed
-            self[obs_type].count       += 1
-            self[obs_type].squaresum   += speed**2
-            self[obs_type].squarecount += 1
-            # Note that there is no separate 'count' for theta. We use the
-            # 'count' for sum. This means if there are
-            # a significant number of bad theta's (equal to None), then vecavg
-            # could be off slightly.  
-            if theta is not None :
-                self[obs_type].xsum += speed * math.cos(math.radians(90.0 - theta))
-                self[obs_type].ysum += speed * math.sin(math.radians(90.0 - theta))
-
-    def _addScalar(self, record, obs_type):
-        v = record[obs_type]
-        if v is None:
-            return
-        if self[obs_type].min is None or v < self[obs_type].min:
-            self[obs_type].min = v
-            self[obs_type].mintime = record['dateTime']
-        if self[obs_type].max is None or v > self[obs_type].max:
-            self[obs_type].max = v
-            self[obs_type].maxtime = record['dateTime']
-        self[obs_type].sum   += v
-        self[obs_type].count += 1
-
+        if obs_type == 'wind':
+            self[obs_type] = VecStats(stats_tuple)
+        else:
+            self[obs_type] = ScalarStats(stats_tuple)
+    
